# g3log

./: CMakeLists.txt  README.md  log.cpp  loglevels.cpp  rotatingfilesink.cpp
include/g3log/: g3log.hpp  log.hpp  loglevels.hpp  rotatingfilesink.hpp
